fixes compile error (getFirst() on array)